fixed spacing issue

--- a/sass/_execution.scss
+++ b/sass/_execution.scss
@@ -17,7 +17,7 @@
         }
 
         > div {
-            max-width: 1000px;
+            max-width: 900px;
             margin: auto;
             padding-top: 80px;
         }
