--- a/sass/_ideas.scss
+++ b/sass/_ideas.scss
@@ -12,7 +12,7 @@
         }
 
         > div {
-            max-width: 1000px;
+            max-width: 900px;
             margin: auto;
         }
 
